guessquest-packge/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observation
  annotations:
    "helm.sh/hook": pre-install
    "helm.sh/hook-delete-policy": before-hook-creation
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  annotations:
    "helm.sh/hook": pre-install
    "helm.sh/hook-delete-policy": before-hook-creation
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  annotations:
    "helm.sh/hook": pre-install
    "helm.sh/hook-delete-policy": before-hook-creation
