guessquest-packge/templates/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observation
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
