guessquest-packge/templates/mongodb-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-exporter
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: mongodb-exporter
  ports:
    - protocol: TCP
      port: 9216
      targetPort: 9216
