guessquest-packge/templates/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30050
  selector:
    app: webapp
