guessquest-packge/templates/default-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guessquest-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: guessquest
    http:
      paths:
      - path: /database
        pathType: Prefix
        backend:
          service:
            name: mongodb
            port:
              number: 27017
