guessquest-packge/templates/observation-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observation-ingress
  namespace: observation
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: guessquest
    http:
      paths:
      - path: /monitor
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
      - path: /observe
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
